--- a/components/navsTabs.html
+++ b/components/navsTabs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Navs and tabs</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Navs and tabs</h1><small>檔名：<code>navsTabs.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Navs and tabs</h1><small > 檔名：<code>navsTabs.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Base nav</h2>
 
-<p>結構說明：</p>
+<p> 結構說明：</p>
 
 <ul>
   <li>ul 為 .nav</li>
@@ -13,42 +13,7 @@
 </ul>
 
 <div class="demo">
-  <ul class="練習">
-    <li class="練習">
-      <a class="練習 active" aria-current="page" href="#">Active</a>
-    </li>
-    <li class="練習">
-      <a class="練習" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    </li>
-  </ul>
-</div>
-
-<p>如果項目的順序很重要，可以使用與 <code>&lt;ul&gt;</code> 類似的 <code>&lt;ol&gt;</code>，或者使用 <code>&lt;nav&gt;</code> 元素</p>
-
-<p>也可以直接使用 a 標籤，則不需要使用 nav-item</p>
-
-<div class="demo">
-  <nav class="nav">
-    <a class="練習 active" aria-current="page" href="#">Active</a>
-    <a class="練習" href="#">Link</a>
-    <a class="練習" href="#">Link</a>
-    <a class="練習 disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </nav>
-</div>
-
-<h2>Available styles</h2>
-
-<h4>Horizontal alignment</h4>
-<p>使用 <code>.justify-content-center</code> 置中對齊:</p>
-
-<div class="demo">
-  <ul class="nav 練習">
+  <ul class="nav">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -64,10 +29,45 @@
   </ul>
 </div>
 
-<p>使用 <code>.justify-content-end</code> 靠右對齊:</p>
+<p> 如果項目的順序很重要，可以使用與 <code>&lt;ul&gt;</code> 類似的 <code>&lt;ol&gt;</code>，或者使用 <code>&lt;nav&gt;</code> 元素 </p>
+
+<p> 也可以直接使用 a 標籤，則不需要使用 nav-item，內層直接使用 nav-link</p>
 
 <div class="demo">
-  <ul class="nav 練習">
+  <nav class="nav">
+    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+  </nav>
+</div>
+
+<h2>Available styles</h2>
+
+<h4>Horizontal alignment</h4>
+<p> 使用 <code>.justify-content-center</code> 置中對齊:</p>
+
+<div class="demo">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li>
+  </ul>
+</div>
+
+<p> 使用 <code>.justify-content-end</code> 靠右對齊:</p>
+
+<div class="demo">
+  <ul class="nav justify-content-end">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -85,10 +85,10 @@
 
 <h4>Vertical</h4>
 
-<p>通過使用 <code>.flex-column</code> 通用類別更改 flex 的軸線方向以堆疊導覽</p>
+<p> 通過使用 <code>.flex-column</code> 通用類別更改 flex 的軸線方向以堆疊導覽 </p>
 
 <div class="demo">
-  <ul class="nav 練習">
+  <ul class="nav flex-column">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -105,10 +105,10 @@
 </div>
 
 <h4>Tabs</h4>
-<p>加入 <code>.nav-tabs</code> 以生成具有分頁標籤的介面</p>
+<p> 加入 <code>.nav-tabs</code> 以生成具有分頁標籤的介面 </p>
 
 <div class="demo">
-  <ul class="nav 練習">
+  <ul class="nav nav-tabs">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -125,9 +125,10 @@
 </div>
 
 <h4>Pills</h4>
+<p> 加入 <code>.nav-pills</code> 以生成藥丸形式 </p>
 
 <div class="demo">
-  <ul class="nav 練習">
+  <ul class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -144,15 +145,15 @@
 </div>
 
 <h4>Fill and justify</h4>
-<p>使用 <code>.nav-fill</code> 會將 <code>.nav-item</code> 內容按照比例分配空間。注意，這會佔用所有的水平空間，但並不是每個導覽項目都具有相同寬度</p>
+<p> 使用 <code>.nav-fill</code> 會將 <code>.nav-item</code> 內容按照比例分配空間。注意，這會佔用所有的水平空間，但並不是每個導覽項目都具有相同寬度 </p>
 
 <div class="demo">
-  <ul class="nav nav-pills 練習">
+  <ul class="nav nav-pills nav-fill">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Active</a>
+      <a class="nav-link " aria-current="page" href="#">Active</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Much longer nav link</a>
+      <a class="nav-link active" href="#">Much longer nav link</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
@@ -163,10 +164,10 @@
   </ul>
 </div>
 
-<p>使用 <code>&lt;nav&gt;</code> 導覽時，您可以忽略 <code>.nav-item</code>，因為客製化 <code>&lt;a&gt;</code> 元素的樣式僅需要 <code>.nav-link</code></p>
+<p> 使用 <code>&lt;nav&gt;</code> 導覽時，您可以忽略 <code>.nav-item</code>，因為客製化 <code>&lt;a&gt;</code> 元素的樣式僅需要 <code>.nav-link</code></p>
 
 <div class="demo">
-  <nav class="nav nav-pills 練習">
+  <nav class="nav nav-pills nav-fill">
     <a class="nav-link active" aria-current="page" href="#">Active</a>
     <a class="nav-link" href="#">Much longer nav link</a>
     <a class="nav-link" href="#">Link</a>
@@ -174,10 +175,10 @@
   </nav>
 </div>
 
-<p>創建等寬元素請使用 <code>.nav-justified</code>。所有的水平空間將被導覽連結佔據，但與上面的 <code>.nav-fill</code> 不同，每個導覽項都將是相同的寬度</p>
+<p> 創建等寬元素請使用 <code>.nav-justified</code>。所有的水平空間將被導覽連結佔據，但與上面的 <code>.nav-fill</code> 不同，每個導覽項都將是相同的寬度 </p>
 
 <div class="demo">
-  <ul class="nav nav-pills 練習">
+  <ul class="nav nav-pills nav-justified">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -194,15 +195,15 @@
 </div>
 
 <h2>Working with flex utilities</h2>
-<p>在下面的範例中，我們的導覽將在最小中斷點以下堆疊，並從 small 斷點開始採用水平排版以填滿所有可用寬度。</p>
+<p> 在下面的範例中，我們的導覽將在最小中斷點以下堆疊，並從 small 斷點開始採用水平排版以填滿所有可用寬度。</p>
 
 <ul>
-  <li>行動版垂直排列</li>
-  <li>桌面版水平排列</li>
+  <li> 行動版垂直排列 </li>
+  <li> 桌面版水平排列 </li>
 </ul>
 
 <div class="demo">
-  <nav class="nav nav-pills 練習">
+  <nav class="nav nav-pills flex-column flex-sm-row">
     <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Active</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="#">Longer nav link</a>
     <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
@@ -214,7 +215,7 @@
 
 <h4>Tabs with dropdowns</h4>
 
-<p>搭配下拉式結構一樣式沒有問題的，加入 data-bs-toggle="dropdown" 在以下範例中</p>
+<p> 搭配下拉式結構一樣式沒有問題的，加入 data-bs-toggle="dropdown" 在以下範例中 </p>
 
 <div class="demo">
   <ul class="nav nav-tabs">
@@ -222,7 +223,7 @@
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" 練習 href="#" role="button" aria-expanded="false">Dropdown</a>
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
         <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -242,7 +243,7 @@
 
 <h4>Pills with dropdowns</h4>
 
-<p>各種樣式互相搭配都是沒有問題的</p>
+<p> 各種樣式互相搭配都是沒有問題的 </p>
 
 <div class="demo">
   <ul class="nav nav-pills">
@@ -250,7 +251,7 @@
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" 練習 href="#" role="button" aria-expanded="false">Dropdown</a>
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Action</a></li>
         <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -268,30 +269,30 @@
   </ul>
 </div>
 
-<h4>JavaScript 頁籤</h4>
+<h4>JavaScript 頁籤 </h4>
 
 <ul>
-  <li>分頁外層為 <code>tab-content</code>，內層為 <code>tab-pane fade</code>，並且其中一個加入 <code>show active</code></li>
-  <li>每個分頁需要有獨立的 id</li>
-  <li>按鈕加上 data-bs-toggle="tab"，並使用 data-bs-target 分別對應 id</li>
+  <li> 分頁外層為 <code>tab-content</code>，內層為 <code>tab-pane fade</code>，並且其中一個加入 <code>show active</code></li>
+  <li> 每個分頁需要有獨立的 id</li>
+  <li> 按鈕加上 data-bs-toggle="tab"，並使用 data-bs-target 分別對應 id</li>
 </ul>
 
 <div class="demo">
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="home-tab" 練習 type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="profile-tab" 練習 type="button" role="tab" aria-controls="profile" aria-selected="false">Profile</button>
+      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Profile</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="contact-tab" 練習 type="button" role="tab" aria-controls="contact" aria-selected="false">Contact</button>
+      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Contact</button>
     </li>
   </ul>
-  <div class="練習" id="myTabContent">
-    <div class="練習" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
-    <div class="練習" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-    <div class="練習" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...HOME</div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...PROFILE</div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...CONTACT</div>
   </div>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
@@ -475,7 +476,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -488,7 +489,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -516,7 +517,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
