--- a/components/toasts.html
+++ b/components/toasts.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Toasts</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Toasts</h1><small>檔名：<code>toasts.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Toasts</h1><small > 檔名：<code>toasts.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Overview</h2>
 <ul>
-  <li>出於效能原因吐司是選擇性加入的，所以<b>您必須自己將它們初始化</b>。</li>
+  <li> 出於效能原因吐司是選擇性加入的，所以 < b > 您必須自己將它們初始化 </b>。</li>
 </ul>
 
 <h2>Examples</h2>
@@ -13,9 +13,9 @@
 <p>Toast 結構：</p>
 
 <ul>
-  <li>外層包含 .toast</li>
-  <li>內層包含 .toast-header, .toast-body</li>
-  <li>可使用 data-bs-dismiss="toast" 關閉吐司元件</li>
+  <li> 外層包含 .toast</li>
+  <li> 內層包含 .toast-header, .toast-body</li>
+  <li> 可使用 data-bs-dismiss="toast" 關閉吐司元件 </li>
 </ul>
 
 <div class="demo">
@@ -34,7 +34,7 @@
 
 <h4>Live</h4>
 
-<p>實際展示，Toast 需要使用 JavaScript 手動將它開啟，請打開後方 JS 的註解</p>
+<p> 實際展示，Toast 需要使用 JavaScript 手動將它開啟，請打開後方 JS 的註解 </p>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
@@ -54,16 +54,16 @@
 </div>
 
 <script>
-  // document.getElementById("liveToastBtn").onclick = function () {
-  //   var liveToast = document.getElementById("liveToast"); //select id of toast
-  //   var bsToast = new bootstrap.Toast(liveToast); //inizialize it
-  //   bsToast.show(); //show it
-  // };
+  document.getElementById("liveToastBtn").onclick = function () {
+    var liveToast = document.getElementById("liveToast"); //select id of toast
+    var bsToast = new bootstrap.Toast(liveToast); //inizialize it
+    bsToast.show(); //show it
+  };
 </script>
 
 <h4>Translucent</h4>
 
-<p>吐司包含半透明的結構</p>
+<p> 吐司包含半透明的結構 </p>
 
 <div class="demo bg-dark">
   <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
@@ -80,10 +80,10 @@
 </div>
 
 <h4>Stacking</h4>
-<p>透過將吐司包裝於 <code>.toast-container</code> 來推疊</p>
+<p> 透過將吐司包裝於 <code>.toast-container</code> 來推疊 </p>
 
 <div class="demo">
-  <div class="練習">
+  <div class="toast-container">
     <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
         <img src="https://bootstrap5.hexschool.com/docs/5.0/assets/brand/bootstrap-logo.svg" class="rounded me-2" alt="..." style="width: 20px; height: 20px; object-fit: cover;">
@@ -110,7 +110,7 @@
   </div>
 </div>
 
-<p>也可以在吐司添加額外的控制項與元件</p>
+<p> 也可以在吐司添加額外的控制項與元件 </p>
 
 <div class="demo">
   <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
@@ -127,10 +127,10 @@
 
 <h4>Color schemes</h4>
 
-<p>一樣可以透過 Utilities 來客製化各種的樣式及色彩</p>
+<p> 一樣可以透過 Utilities 來客製化各種的樣式及色彩 </p>
 
 <div class="demo">
-  <div class="toast fade show align-items-center text-white 練習" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="toast fade show align-items-center text-white bg-info" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="d-flex">
       <div class="toast-body">
         Hello, world! This is a toast message.
@@ -142,11 +142,11 @@
 
 <h2>Placement</h2>
 
-<p>使用 Utilities 重新調整 Toast 的定位</p>
+<p> 使用 Utilities 重新調整 Toast 的定位 </p>
 
 <div class="demo position-relative">
   <div aria-live="polite" aria-atomic="true" class="bg-dark position-relative bd-example-toasts" style="min-height: 240px;">
-    <div class="toast-container position-absolute p-3 練習" id="toastPlacement">
+    <div class="toast-container position-absolute p-3 end-0 bottom-0" id="toastPlacement">
       <div class="toast fade show">
         <div class="toast-header">
           <img src="https://bootstrap5.hexschool.com/docs/5.0/assets/brand/bootstrap-logo.svg" class="rounded me-2" alt="..." style="width: 20px; height: 20px; object-fit: cover;">
@@ -161,7 +161,7 @@
   </div>
 </div>
 
-<p>對於會推播更多通知的系統，請考慮使用包裝元素的方式，讓它們可以堆疊顯示</p>
+<p> 對於會推播更多通知的系統，請考慮使用包裝元素的方式，讓它們可以堆疊顯示 </p>
 
 <div class="demo bg-dark" style="min-height: 240px;">
   <div aria-live="polite" aria-atomic="true" class="position-relative">
@@ -169,10 +169,10 @@
     <!-- - 加入 `.toast-container` 在 .toast 外層 -->
     <!-- - 使用 `.position-absolute`, `top-0` & `end-0` 來定位置角落 -->
     <!-- - 可以使用 `.p-3` 來使 .toast 群組距離邊緣有一些距離 -->
-    <div class="練習">
+    <div class="toast-container position-absolute top-0 end-0 p-3">
   
       <!-- Then put toasts within -->
-      <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast fade show top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
           <img src="https://bootstrap5.hexschool.com/docs/5.0/assets/brand/bootstrap-logo.svg" class="rounded me-2" alt="..." style="width: 20px; height: 20px; object-fit: cover;">
           <strong class="me-auto">Bootstrap</strong>
@@ -199,11 +199,11 @@
   </div>
 </div>
 
-<p>還可以使用 flexbox 通用類別來對吐司做水平 和/或 垂直的對齊</p>
+<p> 還可以使用 flexbox 通用類別來對吐司做水平 和 / 或 垂直的對齊 </p>
 
 <div class="demo bg-dark d-flex" style="min-height: 240px;">
   <!-- 使用 Flex 做到垂直、水平置中 -->
-  <div aria-live="polite" aria-atomic="true" class="d-flex 練習 w-100">
+  <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100">
 
     <!-- Then put toasts within -->
     <div class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
@@ -402,7 +402,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -415,7 +415,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -443,7 +443,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
